tests/expectations/parser/functions/test_keyword_fail.out
Error [EPAR0370005]: expected '@', 'struct', 'async', 'const', 'function', 'inline', 'program', 'script', 'transition' -- found 'test'
    --> test:3:1
     |
   3 | test main() {}
     | ^^^^
